[package]
name = "accelerate-src"
version = "0.3.2"
license = "Apache-2.0/MIT"
authors = ["Andrew Straw <strawman@astraw.com>"]
description = "The package provides a source of BLAS and LAPACK via the Accelerate framework."
documentation = "https://docs.rs/accelerate-src"
homepage = "https://github.com/blas-lapack-rs/accelerate-src"
repository = "https://github.com/blas-lapack-rs/accelerate-src"
readme = "README.md"
categories = ["science"]
keywords = ["linear-algebra"]
build = "build.rs"
links = "Accelerate.framework"

[dev-dependencies]
libc = "0.2.86"
